# PlugGD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ScriptController.cpp  ScriptController.h  ScriptLayer.cpp  ScriptLayer.h  main.cpp  pyedit.sublime-project  pyedit.sublime-workspace
PyMac/include/python3.8/: pyconfig.h
PyMac/lib/pkgconfig/: python-3.8-embed.pc  python-3.8.pc
PyMac/lib/python3.8/: _sysconfigdata__darwin_darwin.py
PyMac/lib/python3.8/config-3.8-darwin/: Makefile  config.c  python-config.py
Pyw32/: python38.def  python38.exp
pyedit_engine/: CMakeLists.txt  engine.cpp  engine.h  engine.mm  helper_hooks.cpp  helper_hooks.h  helper_hooks.mm  pyedit_engine.sublime-project  pyedit_engine.sublime-workspace  thread_control.cpp  thread_control.h  wind32.h
pyedit_engine/cmake/: FindCython.cmake
pyedit_engine/cy/: EditorUI.pyx  GDArray.pyx  GameObject.pyx  ObjectExtensions.pyx  PyEvent.pyx  PyLvl.pyx  UIHandler.pyx  base.pxd  extra_bindings.h  main.cpp  main.h  main.pyx
rapidjson/: CMakeLists.txt
rapidjson/example/: CMakeLists.txt
rapidjson/include/rapidjson/: allocators.h  document.h  encodings.h  prettywriter.h  rapidjson.h  schema.h  stringbuffer.h  writer.h
rapidjson/include/rapidjson/internal/: meta.h  stack.h
rapidjson/test/unittest/: allocatorstest.cpp  documenttest.cpp  prettywritertest.cpp  schematest.cpp  stringbuffertest.cpp  valuetest.cpp  writertest.cpp
src/: ScriptController.cpp  ScriptController.h  ScriptLayer.cpp  ScriptLayer.h  main.cpp
w32bootstrap/: CMakeLists.txt  dllmain.cpp
wbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pyedit.sln  pyedit.vcxproj  pyedit.vcxproj.filters
wbuild/Release/: pyedit.exp
wbuild/minhook/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  minhook-config-version.cmake  minhook-config.cmake  minhook.sln  minhook.vcxproj  minhook.vcxproj.filters
wbuild/minhook/minhook.dir/Release/minhook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  minhook.lastbuildstate
wbuild/pyedit.dir/Release/: pyedit.dll.recipe
wbuild/pyedit.dir/Release/pyedit.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pyedit.write.1u.tlog
wbuild/pyedit_engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CyBindings.vcxproj  CyBindings.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  pyedit_engine.sln  pyedit_engine.vcxproj  pyedit_engine.vcxproj.filters
wbuild/pyedit_engine/pyedit_engine.dir/Release/pyedit_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
wbuild/pyedit_engine/win32/Release/CyBindings/: CyBindings.recipe
wbuild/pyedit_engine/win32/Release/CyBindings/CyBindings.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  CyBindings.lastbuildstate
wbuild/rapidjson/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RapidJSON.sln  RapidJSONConfig.cmake  RapidJSONConfigVersion.cmake  cmake_install.cmake  travis_doc.vcxproj
wbuild/rapidjson/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
wbuild/win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
wbuild/win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
