cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(pyedit_bootstrap VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

add_library(${PROJECT_NAME} SHARED dllmain.cpp)

install(TARGETS ${PROJECT_NAME} 
    LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/out
    ARCHIVE DESTINATION ${CMAKE_BINARY_DIR}/out)